rmq-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq
spec:
  selector:
    matchLabels:
      app: vprormq
  template:
    metadata:
      labels:
        app: vprormq
    spec:
      containers:
      - name: vprormq
        image: rabbitmq
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: vprormq-port
          containerPort: 5672
