vprodbdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  replicas: 1
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: spikey21/vprofile-db:latest
        volumeMounts:
          - name: vpro-db-data
            mountPath: /var/lib/mysql
        ports:
          - name: vprodb-port
            containerPort: 3306
      nodeSelector:
        zone: us-east-1a
      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
